style.css
/* google font 'Bitter' */
@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* google font 'noto sans' */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*,
*::after,
*::before {
  box-sizing: border-box;
}

:root {
  --content-font-family: 'Noto Sans', sans-serif;
  --heading-font-family: 'Bitter', serif;
  --txt-clr: black;
  --bg-clr: white;
}

@media (prefers-color-scheme: dark) {
  :root {
    --txt-clr: white;
    --bg-clr: #121212;
  }

  img {
    filter: brightness(0.8) contrast(1.2);
  }

  .icons img:not(footer .icons img) {
    background-color: var(--txt-clr);
    border-radius: 50%;
    padding: 0.2em;
  }

  footer p,
  footer h2,
  footer span {
    color: var(--bg-clr);
  }

  .project {
    box-shadow: rgb(0 0 0 / 25%) 0px 6px 12px -2px,
      rgb(0 0 0 / 30%) 0px 3px 7px -3px;
    background-color: #000000;
  }
}

body {
  color: var(--txt-clr);
  background-color: var(--bg-clr);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--heading-font-family);
}

*:not(h1, h2, h3, h4, h5, h6) {
  font-family: var(--content-font-family);
}

img {
  max-width: 100%;
}

/* main */
main {
  padding: 1.5em;
  position: relative;
  line-height: 1.5;
}

main::after {
  content: '';
  background-image: url('./images/tilt.svg');
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  transform: rotateY(180deg);
  z-index: -1;
  max-height: 60vh;
}

.profile-pic-container {
  position: relative;
}

.profile-pic {
  width: 100%;
  max-height: 50vh;
  object-fit: cover;
  object-position: center 10%;
  border-radius: 10px;
  box-shadow: 2px 5px 5px rgba(50, 50, 93, 0.25);
}

.name {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  animation: tracking-in-expand 1000ms ease;
}

main h2 {
  text-align: center;
}

.icons {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.icons img {
  width: 40px;
}

/* work section */
.work-section {
  padding: 1.5em;
}

.work-section h2 {
  text-align: center;
}

.project {
  border-radius: 5px;
}

@media (prefers-color-scheme: light) {
  .project {
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
  }
}

.project + .project {
  margin-top: 50px;
}

.project-image {
  width: 100%;
  height: 200px;
  object-fit: cover;
  border-radius: 5px;
}

.project-details {
  position: relative;
  padding: 0.5em 1.5em;
}

.project-details .icons {
  position: absolute;
  top: 20px;
  right: 15px;
}

.project-details .icons img {
  width: 25px;
}

/* footer */
footer {
  background-color: rgb(56, 178, 226);
}

footer > div {
  padding: 1.5em;
  color: var(--txt-clr);
}

footer > div img:not(.icons img) {
  display: none;
}

footer .icons {
  margin: 2em 0;
}

footer > img {
  border-radius: 0px;
}

/* animation classes */

.scale-up-center,
.project,
.footer-img {
  -webkit-animation: scale-up-center 600ms ease;
  animation: scale-up-center 600ms ease;
}

.slide-left {
  -webkit-animation: slide-left 0.6s both;
  animation: slide-left 0.6s both;
}

.tracking-in-expand {
  -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1)
    both;
  animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) both;
}

/* media queries */

/* tablets */
@media (min-width: 550px) {
  main {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .about-me {
    padding: 2em;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    background-color: var(--bg-clr);
    flex: 3;
  }

  main h2 {
    text-align: left;
  }

  .profile-pic-container {
    flex: 2;
  }

  main .icons {
    justify-content: end;
  }

  .work-section {
    padding: 2em;
  }

  .projects-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 2em;
  }

  .project + .project {
    margin-top: 0;
  }

  footer {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1em;
    margin-top: 2em;
  }

  footer > img {
    max-width: 50%;
    margin-right: 2em;
  }

  footer .icons {
    justify-content: start;
  }
}

/* laptops */
@media (min-width: 1200px) {
  .projects-container {
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 3em;
  }

  .profile-pic-container {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .profile-pic {
    object-fit: cover;
    width: 1800px;
    object-position: center 10%;
  }

  .name {
    color: white;
  }

  main,
  .work-section {
    padding: 2em 4em;
  }

  .profile-pic {
    height: 50vh;
  }

  footer {
    gap: 1em;
  }

  .icons img,
  .project {
    transition: transform 300ms ease;
    cursor: pointer;
  }

  .icons img:hover,
  .project:hover {
    transform: scale(1.1);
  }
}

/* even larger displays */
@media (min-width: 1800px) {
  .projects-container {
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  }
}

/* KEYFRAMES */
/* ----------------------------------------------
 * Generated by Animista on 2024-1-13 8:7:32
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation scale-up-center
 * ----------------------------------------
 */
@-webkit-keyframes scale-up-center {
  0% {
    -webkit-transform: scale(0.5);
    transform: scale(0.5);
    opacity: 0;
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
    opacity: 1;
  }
}
@keyframes scale-up-center {
  0% {
    -webkit-transform: scale(0.5);
    transform: scale(0.5);
    opacity: 0;
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
    opacity: 1;
  }
}

/* ----------------------------------------------
 * Generated by Animista on 2024-1-13 8:13:45
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

@-webkit-keyframes slide-left {
  0% {
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
}
@keyframes slide-left {
  0% {
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
}
/* ----------------------------------------------
 * Generated by Animista on 2024-1-13 8:43:12
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

@-webkit-keyframes tracking-in-expand {
  0% {
    letter-spacing: -0.5em;
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    opacity: 1;
  }
}
@keyframes tracking-in-expand {
  0% {
    letter-spacing: -0.5em;
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    opacity: 1;
  }
}

